fix horizontal scroll

--- a/src/Routes/Profile/components/GameBox/GameBox.module.scss
+++ b/src/Routes/Profile/components/GameBox/GameBox.module.scss
@@ -3,6 +3,7 @@
 $description-background: getBtnColor('basic');
 
 .GameBox {
+  display: block;
   color: $font-white;
   @include w100v100;
   overflow: visible;
